<resources>
	 <string name="app_name">Single Screen App</string>

	 <!-- TODO: Remove or change this placeholder text -->
	 <string name="hello_blank_fragment">Hello blank fragment</string>
	 <string name="mango_fruit">Mango Fruit</string>
	 <string name="contact_us">Contact US</string>
	 <string name="info_item">Info Item</string>
	 <string name="description">Description</string>
	 <string name="_201014775215">: +201014775215</string>
	 <string name="alialfayed1_gmail_com">: alialfayed1@gmail.com</string>
	 <string name="_10_st_cairo_egypt">: 10.St Cairo , Egypt</string>
	 <string name="price">Price :</string>
	 <string name="descriptiontext">Description :</string>
	 <string name="_50">50 $</string>
	 <string name="dec_text">A mango is a juicy stone fruit produced from numerous species of tropical trees belonging to the flowering plant genus Mangifera, cultivated mostly for their edible fruit. Most of these species are found in nature as wild mangoes. The genus belongs to the cashew family Anacardiaceae.</string>
</resources>
