<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	 xmlns:app="http://schemas.android.com/apk/res-auto"
	 xmlns:tools="http://schemas.android.com/tools"
	 android:layout_width="match_parent"
	 android:layout_height="match_parent"
	 tools:context=".ContactUsFragment">


	 <ImageView
		  android:id="@+id/imageView"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:src="@drawable/ic_contact_us"
		  app:layout_constraintEnd_toEndOf="parent"
		  app:layout_constraintStart_toStartOf="parent"
		  app:layout_constraintTop_toTopOf="parent"
		  android:contentDescription="@string/description" />

	 <TextView
		  android:id="@+id/textView6"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:layout_marginStart="16dp"
		  android:layout_marginTop="16dp"
		  android:text="@string/contact_us"
		  android:textColor="@color/colorPrimaryDark"
		  android:textSize="18sp"
		  android:textStyle="bold"
		  app:layout_constraintStart_toStartOf="parent"
		  app:layout_constraintTop_toBottomOf="@+id/imageView" />

	 <TextView
		  android:id="@+id/txtPhone"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:layout_marginTop="16dp"
		  android:text="@string/_201014775215"
		  android:textColor="@color/colorPrimary"
		  android:textSize="14sp"
		  app:layout_constraintStart_toEndOf="@+id/textView6"
		  app:layout_constraintTop_toBottomOf="@+id/textView6" />

	 <TextView
		  android:id="@+id/txtEmail"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:layout_marginTop="16dp"
		  android:text="@string/alialfayed1_gmail_com"
		  android:textColor="@color/colorPrimary"
		  android:textSize="14sp"
		  app:layout_constraintStart_toEndOf="@+id/textView6"
		  app:layout_constraintTop_toBottomOf="@+id/txtPhone" />

	 <TextView
		  android:id="@+id/txtAddress"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:layout_marginTop="16dp"
		  android:text="@string/_10_st_cairo_egypt"
		  android:textColor="@color/colorPrimary"
		  android:textSize="14sp"
		  app:layout_constraintStart_toEndOf="@+id/textView6"
		  app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

	 <ImageView
		  android:id="@+id/imageView2"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:src="@drawable/ic_phone"
		  app:layout_constraintBottom_toBottomOf="@+id/txtPhone"
		  app:layout_constraintStart_toStartOf="@+id/textView6"
		  app:layout_constraintTop_toTopOf="@+id/txtPhone"
		  android:contentDescription="@string/description" />

	 <ImageView
		  android:id="@+id/imageView3"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:src="@drawable/ic_mail"
		  app:layout_constraintBottom_toBottomOf="@+id/txtEmail"
		  app:layout_constraintStart_toStartOf="@+id/imageView2"
		  app:layout_constraintTop_toTopOf="@+id/txtEmail"
		  android:contentDescription="@string/description" />

	 <ImageView
		  android:id="@+id/imageView4"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:src="@drawable/ic_home_run"
		  app:layout_constraintBottom_toBottomOf="@+id/txtAddress"
		  app:layout_constraintStart_toStartOf="@+id/imageView3"
		  app:layout_constraintTop_toTopOf="@+id/txtAddress"
		  android:contentDescription="@string/description" />

	 <TextView
		  android:id="@+id/txtThread"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:layout_marginTop="20dp"
		  android:text="You Can Click To Move Intent"
		  app:layout_constraintEnd_toEndOf="parent"
		  app:layout_constraintStart_toStartOf="parent"
		  app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>